# Python_42

Python Module 00/ex1/: ft_plot_area.py
Python Module 00/ex2/: ft_harvest_total.py
Python Module 00/ex4/: ft_water_reminder.py
Python Module 00/ex5/: ft_count_harvest_recursive.py
Python Module 00/ex6/: ft_garden_summary.py
Python Module 00/ex7/: ft_seed_inventory.py
Python Module 01/: ft_garden_analytics.py  ft_garden_data.py  ft_garden_intro.py  ft_garden_security.py  ft_plant_factory.py  ft_plant_growth.py  ft_plant_types.py
Python Module 01/ex3/: ft_plant_factory.py
Python Module 01/ex5/: ft_plant_types.py
Python Module 01/ex6/: ft_garden_analytics.py
Python Module 02/: ft_custom_errors.py  ft_different_errors.py  ft_finally_block.py  ft_first_exception.py  ft_garden_management.py  ft_raise_errors.py
Python Module 03/: ft_achievement_tracker.py  ft_command_quest.py  ft_coordinate_system.py  ft_inventory_system.py
Python Module 03/ex0/: ft_command_quest.py
Python Module 03/ex1/: ft_score_analytics.py
Python Module 03/ex2/: ft_coordinate_system.py
Python Module 03/ex3/: ft_achievement_tracker.py
Python Module 03/ex4/: ft_inventory_system.py
Python Module 03/ex5/: ft_data_stream.py
Python Module 03/ex6/: ft_analytics_dashboard.py
Python Module 04/ex0/: ft_ancient_text.py
Python Module 05/: data_stream.py  nexus_pipeline.py  stream_processor.py
Python Module 06/: ft_import_transmutation.py  ft_pathway_debate.py
Python Module 08/ex1/: ft_operator.py  operator.py  pyproject.toml  requirements.txt  requiriments.txt
(+40 files in other folders)
