[tool.poetry]
name = "the-operator"
version = "0.1.0"
description = "Matrix data analysis tool for Zion"
authors = ["Neo <neo@zion.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
requests = "^2.31.0"
matplotlib = "^3.7.2"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"